==================== 2.19.3 ====================

==================== 2.19.2 ====================

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install data in $(datadir)/gnome-panel/ instead of
	$(datadir)/gnome/panel/
	Fix bug #436461

==================== 2.18.1 ====================

==================== 2.18.0 ====================

==================== 2.17.92 ====================

==================== 2.17.91 ====================

==================== 2.17.90 ====================

2007-01-15  Vincent Untz  <vuntz@gnome.org>

	* fish.glade: do not hardcode invisible_char in glade files
	Fix bug #393901, patch by Vitaliy Ischenko <betalb@gmail.com>

2007-01-14  Vincent Untz  <vuntz@gnome.org>

	* fish.c: small HIG fix. Bug #350672

==================== 2.16.2 ====================

==================== 2.16.1 ====================

==================== 2.16.0 ====================

==================== 2.15.92 ====================

2006-08-12  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install in-process library in $(libdir)/gnome-panel
	Fix bug #351042

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* GNOME_FishApplet_Factory.server.in.in:
	* Makefile.am: make it possible to compile as an in-process applet
	* fish.c: ditto, and set icons for all dialogs since the default icon
	can only be set if the applet is out of process

==================== 2.15.91 ====================

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* GNOME_FishApplet_Factory.server.in.in: icon name change

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: updated
	* gnome-fish.png: kill
	* fish.c: (display_about_dialog):
	(fish_applet_fill): update for icon name change

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* wanda.png:
	* wanda.svg: new animation image for Wanda, with source!
	* Makefile.am: add new files (we distribute wanda.svg, but don't
	install it
	* fish.schemas.in: update defaults for the new animation
	Animation by Ulisse <ulisail@yahoo.it>
