@@ -1,3 +1,9 @@
+2007-06-14  Vincent Untz  <vuntz@gnome.org>
+
+	* fish.c: (set_tooltip): migrate to GtkTooltip
+	(destroy_tooltip): kill
+	(fish_applet_destroy): updated
+
 ==================== 2.19.3 ====================
 
 ==================== 2.19.2 ====================
